fix: broken layout

--- a/src/app/(fatec)/fatec.module.css
+++ b/src/app/(fatec)/fatec.module.css
@@ -14,7 +14,7 @@
 .grid {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 10% auto 15%;
+  grid-template-rows: auto;
   grid-template-areas:
     'NB'
     'CT'
