--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,6 @@ a {
 
 body {
   background: var(--white);
-  color: var(--black);
 }
 
 html {
